# veildata

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  NOTICE  README.md  e2e_config.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml  publish.yml
benchmarks/: test_performance.py
docs/: README.md  api.rst  benchmarks.rst  cli.rst  conf.py  datadog_integration.md  datadog_integration.rst  examples.rst  index.rst  json_traversal.rst  quickstart.rst  streaming.rst  universal_config_spec.md  universal_config_spec.rst
examples/: hybrid_config.yaml  ml_config.yaml  rules_config.yaml  streaming_example.py
src/veildata/: __init__.py  cli.py  compose.py  defaults.py  detectors.py  diagnostics.py  engine.py  exceptions.py  maskers.py  pipeline.py  revealers.py  streaming_buffer.py  transforms.py  utils.py  wizard.py
src/veildata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/veildata/core/: __init__.py  config.py
src/veildata/maskers/: __init__.py  ner_bert.py  ner_spacy.py  regex.py
src/veildata/redactors/: __init__.py  ner_bert.py  ner_spacy.py  regex.py
src/veildata/utils/: __init__.py  traversal.py
tests/: conftest.py  log_gen.py  mock_agent.py  test_cli.py  test_cli_coverage.py  test_cli_json.py  test_config_toml.py  test_core.py  test_detectors.py  test_e2e.py  test_engine.py  test_error_formatting.py  test_explain.py  test_golden_suite.py  test_integration.py  test_oneshot.py  test_overwrite.py  test_pipeline.py  test_regex_wizard.py  test_streaming_buffer.py  test_traversal.py  test_utils.py  test_wizard.py
tests/benchmark/: test_performance.py  utils.py
tests/core/: test_config.py
tests/data/: golden_suite.json  sample.txt  test_regex_email_mask_config.yaml  test_regex_phone_mask_config.yaml
tests/test_maskers/: test_ner_bert.py  test_ner_spacy.py  test_regex.py
tests/test_redactors/: test_ner_bert.py  test_ner_spacy.py  test_regex.py
