 [build-system]
 requires = ["setuptools>=69", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "veildata"
 version = "0.0.1"
 description = "Framework for masking and unmasking PII."
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = ["pre-commit", "black", "ruff"]
 license = {text = "MIT"}
 authors = [
   { name = "Eric" }
 ]
 keywords = ["veildata", "pii", "redaction", "privacy", "ai", "nlp"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]

 [project.optional-dependencies]
 spacy = [
   "spacy>=3.5.0",
 ]
 bert = [
   "torch>=2.0.0",
   "transformers>=4.30.0",
 ]
 all = [
   "spacy>=3.5.0",
   "torch>=2.0.0",
   "transformers>=4.30.0",
 ]


 [tool.uv]
 index-url = "https://pypi.org/simple"
 cache-dir = ".uv-cache"

 [tool.ruff]
 line-length = 88
 select = ["E", "F", "I"]
 ignore = ["E501"]

 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
 line-ending = "auto"

 [tool.black]
 line-length = 88
 target-version = ['py38']

 [tool.setuptools]
 packages = { find = { where = ["src"] } }

 [dependency-groups]
 dev = [
   "pytest>=8.3.5",
 ]
