 [build-system]
 requires = ["setuptools>=69", "wheel"]
 build-backend = "setuptools.build_meta"

[project]
name = "veildata"
version = "0.2.0"
description = "Framework for redacting and revealing PII."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pre-commit",
    "black",
    "ruff",
    "typer",
    "rich",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.10.7",
]
license = {text = "Apache-2.0"}
authors = [
    { name = "Eric" }
]
keywords = ["veildata", "pii", "redaction", "privacy", "ai", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
# TODO: Installing uv sync --optional bert uninstalls typer. Fix this.
[project.optional-dependencies]
spacy = [
  "spacy>=3.8.2",
]
bert = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
all = [
    "spacy==3.8.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pytest>=8.3.5",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.scripts]
veildata = "veildata.cli:main"


[tool.uv]
index-url = "https://pypi.org/simple"
cache-dir = ".uv-cache"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.setuptools]
packages = { find = { where = ["src"] } }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.coverage.run]
branch = true
source = ["veildata"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
